tests/compile_fail/unknown_function_name_value_attr.rs
//! Test unknown function name-value attribute error.

use angelscript::function;

#[function(unknown_key = "value")]
fn test_func() {}

fn main() {}
